--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scaffold",
+  "name": "aeroscan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,12 +11,15 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@magicblock-labs/ephemeral-rollups-sdk": "^0.2.5",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.84.1",
+    "@tremor/react": "^3.18.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.13.0",
