--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.84.1",
     "@tremor/react": "^3.18.7",
+    "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.13.0",
@@ -27,6 +29,7 @@
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
